# PyGameTemplate

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE-THIRD-PARTY  LICENSING.md  README.md  pyproject.toml  pyrightconfig.json  tox.ini
.github/workflows/: validation.yml
scripts/: license-check.sh
src/: __init__.py  __main__.py  config.py  game.py
src/util/: base_game.py  body.py  color.py  descriptor.py  log.py  math.py
